# inductive

./: README.md  ROADMAP.md  pyproject.toml
src/inductive/: __init__.py  builtins.py  compare.py  config.py  list.py  nat.py
tests/: nat_test.py  strategies.py
