[project]
name = "inductive"
description = "Inductive data structures for Python"
version = "0.0.1-dev2"
readme = "README.md"
keywords = [
    "inductive",
    "data structures",
    "nat",
    "natural numbers",
    "list",
    "linked list",
    "dependent typing",
]

requires-python = ">=3.12"
dependencies = [
    "attrs>=24,<25",
    "result>=0.17,<0.18",
    "option-python>=0.0.2,<0.1",
]

[project.optional-dependencies]
dev = [
    "build>=1.2,<1.3",
    "hypothesis>=6,<7",
    "pytest>=8,<9",
    "setuptools>=75,<76",
    "twine>=5,<6",
]

[project.license]
file = "LICENSE"

[[project.authors]]
name = "Lexa"
email = "contact@qexat.com"

[project.urls]
source = "https://github.com/qexat/inductive"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
